Fixed custom wallpaper Context Menu z-index
As you can see in `src/ui/webui/resources/css/menu.css`, the z-index CSS property for the menu is 3.
Since the z-index CSS property of the check Image is also 3, it causes some UI glitches like the one below.

I've set it to 2 since 1 is used by thumbnails.

OLD=http://i.imgur.com/HfCtRvJ.png
NOW=http://i.imgur.com/nXkLa3b.png

Review URL: https://codereview.chromium.org/121723002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@255916 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: f6ca12ef10248c5fd648825e61695b2769c4ddc3

--- a/chrome/browser/resources/chromeos/wallpaper_manager/css/wallpaper_manager.css
+++ b/chrome/browser/resources/chromeos/wallpaper_manager/css/wallpaper_manager.css
@@ -171,7 +171,7 @@ body {
   position: absolute;
   top: 18px;
   width: 32px;
-  z-index: 3;
+  z-index: 2;
 }
 
 ::-webkit-scrollbar {
